--- a/hw2/hw2_q2.ipynb
+++ b/hw2/hw2_q2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Add book_shelf.g"
+    "### 1. Add book_shelf.g and "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected object:  book4\n",
+      "Selected object:  mug\n",
       "Object orientation:  vertical\n"
      ]
     },
@@ -81,16 +81,16 @@
        "0"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# select an object randomly\n",
-    "curObj = random.choice(objects)\n",
+    "# curObj = random.choice(objects)\n",
     "\n",
-    "# curObj = \"book2\"\n",
+    "curObj = \"mug\"\n",
     "\n",
     "print(\"Selected object: \", curObj)\n",
     "\n",
@@ -127,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.040966, evals: 21, done: 1, feasible: 0, sos: 35.6286, f: 0, ineq: 0, eq: 1.50046 }\n"
+      "{ time: 0.042918, evals: 23, done: 1, feasible: 0, sos: 56.79, f: 0, ineq: 0, eq: 3.12409 }\n"
      ]
     }
    ],
@@ -254,23 +254,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 1.20669, evals: 542, done: 1, feasible: 0, sos: 130.126, f: 0, ineq: 0, eq: 3.16717 }\n"
+      "{ time: 0.025129, evals: 18, done: 1, feasible: 0, sos: 17.5871, f: 0, ineq: 0, eq: 7.173 }\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<robotic._robotic.Frame at 0x7fb76be0a7f0>"
+       "<robotic._robotic.Frame at 0x7fb5b193fd70>"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,14 +286,33 @@
     "komo_2.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
     "komo_2.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e0], qHome)\n",
     "\n",
+    "# calculate gripper and goal offset (in z direction)\n",
+    "curObjPos = C.getFrame(curObj).getSize()\n",
+    "if max(curObjPos) == curObjPos[0]:\n",
+    "    goal_offset = [curObjPos[0], 0, 0]\n",
+    "elif max(curObjPos) == curObjPos[1]:\n",
+    "    goal_offset = [0, curObjPos[1], 0]\n",
+    "else:\n",
+    "    goal_offset = [0, 0, curObjPos[2]]\n",
+    "\n",
+    "\n",
     "# this objective moves the gripper close to the goal\n",
     "komo_2.addObjective(\n",
     "    times=[],\n",
     "    feature=ry.FS.positionRel,\n",
-    "    frames=['l_gripper', \"goal\"],\n",
+    "    frames=['l_gripper', 'goal'],\n",
     "    type=ry.OT.eq,\n",
     "    scale=[1e1],\n",
-    "    target=[0, 0, 0.1]\n",
+    "    target=goal_offset\n",
+    ")\n",
+    "\n",
+    "komo_2.addObjective(\n",
+    "    times=[],\n",
+    "    feature=ry.FS.positionDiff,\n",
+    "    frames=[curObj, 'goal'],\n",
+    "    type=ry.OT.eq,\n",
+    "    scale=[1e1],\n",
+    "    target=[0, 0, 0.025]\n",
     ")\n",
     "\n",
     "komo_2.addObjective(\n",
@@ -302,7 +321,7 @@
     "    frames=['l_gripper', \"goal\"],\n",
     "    type=ry.OT.eq,\n",
     "    scale=[1e1],\n",
-    "    target=[1]\n",
+    "    target=[0]\n",
     ")\n",
     "\n",
     "komo_2.addObjective(\n",
@@ -311,7 +330,7 @@
     "    frames=['goal', 'l_gripper'],\n",
     "    type=ry.OT.eq,\n",
     "    scale=[1e1],\n",
-    "    target=[-1]\n",
+    "    target=[0]\n",
     ")\n",
     "\n",
     "\n",
@@ -325,7 +344,7 @@
     "    C.view(False, f'waypoint {t}')\n",
     "    time.sleep(speed)\n",
     "    \n",
-    "C.getFrame(curObj) .unLink()"
+    "C.getFrame(curObj) .unLink() .setColor(orig_color)"
    ]
   },
   {
@@ -337,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +365,7 @@
        "0"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +393,7 @@
        "0"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,23 +407,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
     "# C.addFrame(\"visual\") .setPosition(C.getFrame(\"goal\").getPosition()) .setColor([0, 1, 1]) .setShape(ry.ST.marker, [0.7])\n",
-    "# # C.addFrame(\"visual_gripper_orig\")  .setShape(ry.ST.marker, [0.]).setPosition(gripper_orig_pos) .setQuaternion(gripper_orig_quat) .setColor([0, 1, 0])\n",
+    "# # # C.addFrame(\"visual_gripper_orig\")  .setShape(ry.ST.marker, [0.]).setPosition(gripper_orig_pos) .setQuaternion(gripper_orig_quat) .setColor([0, 1, 0])\n",
     "# C.addFrame(\"visual_gripper_final\") .setShape(ry.ST.marker, [0.4]) .setPosition(C.getFrame(\"l_gripper\").getPosition()) .setQuaternion(C.getFrame(\"l_gripper\").getQuaternion()) .setColor([0, 1, 0]) \n",
     "# C.view()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reinitialise komo and arm position\n",
+    "# # reinitialise komo and arm position\n",
     "# try:\n",
     "#     del komo_2\n",
     "# except:\n",
