--- a/hw2/hw2_q1.ipynb
+++ b/hw2/hw2_q1.ipynb
@@ -9,20 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import robotic as ry\n",
-    "import time\n",
-    "max_trials = 10\n",
-    "max_vel = 100\n",
-    "max_acc = max_vel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +21,12 @@
     }
    ],
    "source": [
+    "import robotic as ry\n",
+    "import time\n",
+    "max_trials = 10\n",
+    "max_vel = 100\n",
+    "max_acc = max_vel\n",
+    "\n",
     "C = ry.Config()\n",
     "C.addFile(ry.raiPath('Question-01/environment/cargo.g'))\n",
     "C.addFile(ry.raiPath('Question-01/environment/cargobot.g'))\n",
@@ -45,22 +38,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# del C\n",
-    "# C.view()\n",
-    "# C.getFrameNames()\n",
-    "# qHome = C.getJointState()\n",
-    "# print(qHome)\n",
-    "# print(C.getFrameNames())\n",
-    "\n",
-    "# komo_1.get"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -218,10 +195,10 @@
     }
    ],
    "source": [
-    "# for t in range(q_gripper_to_cargo.shape[0]):\n",
-    "#     C.setJointState(q_gripper_to_cargo[t])\n",
-    "#     C.view(False, f'waypoint {t}')\n",
-    "#     time.sleep(0.1)\n",
+    "for t in range(q_gripper_to_cargo.shape[0]):\n",
+    "    C.setJointState(q_gripper_to_cargo[t])\n",
+    "    C.view(False, f'waypoint {t}')\n",
+    "    time.sleep(0.1)\n",
     "    \n",
     "for t in range(q_cargobot_to_goal_area.shape[0]):\n",
     "    C.setJointState(q_cargobot_to_goal_area[t])\n",
@@ -254,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -273,10 +250,22 @@
       "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
       "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
       "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
-      "-- *** Found path at trial num # 5  ***\n",
-      "RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
       "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n"
+      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
+      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
+      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
+      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
+      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
+      "*** Found path at trial num # 9  ***\n"
      ]
     }
    ],
@@ -314,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,8 +376,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Move robot from home position to cargo position. Then attach cargo to gripper"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,22 +399,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now find new RRT path with cargo attached, b/c current path_2 (from cargo position to goal area) would make the cargo hit the walls"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  -- rrt success: queries:3198 tree sizes: 267 239\n",
-      "*** Found path at trial num # 1  ***\n"
+      "*** Found path at trial num # 1  ***\n",
+      "  -- rrt success: queries:2723 tree sizes: 213 169\n"
      ]
     }
    ],
    "source": [
-    "# Need to find new RRT path 2 with cargo attached, b/c current one would make the cargo hit the walls (i.e. from cargo position to goal area)\n",
-    "\n",
     "ry.params_clear()\n",
     "ry.params_add({'rrt/stepsize':.1, 'rrt/verbose': 1}) #verbose=3 makes it very slow, and displays result, and verbose=4 waits keypress..\n",
     "\n",
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,16 +459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<robotic._robotic.Frame at 0x7f3fb6839870>"
+       "<robotic._robotic.Frame at 0x7f07ae73d3f0>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
