--- a/hw2/hw2_q2.ipynb
+++ b/hw2/hw2_q2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -64,15 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selected object:  mug\n",
-      "Object orientation:  vertical\n"
+      "Selected object:  book3\n",
+      "Object orientation:  horizontal\n"
      ]
     },
     {
@@ -81,7 +81,7 @@
        "0"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
     "# select an object randomly\n",
     "# curObj = random.choice(objects)\n",
     "\n",
-    "curObj = \"mug\"\n",
+    "curObj = \"book3\"\n",
     "\n",
     "print(\"Selected object: \", curObj)\n",
     "\n",
@@ -127,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.042918, evals: 23, done: 1, feasible: 0, sos: 56.79, f: 0, ineq: 0, eq: 3.12409 }\n"
+      "{ time: 0.066754, evals: 30, done: 1, feasible: 0, sos: 47.7716, f: 0, ineq: 0, eq: 111.311 }\n"
      ]
     }
    ],
@@ -254,23 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.025129, evals: 18, done: 1, feasible: 0, sos: 17.5871, f: 0, ineq: 0, eq: 7.173 }\n"
+      "[0, 0, 0.25]\n",
+      "{ time: 0.038623, evals: 30, done: 1, feasible: 0, sos: 13.1398, f: 0, ineq: 0, eq: 28.5064 }\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<robotic._robotic.Frame at 0x7fb5b193fd70>"
+       "<robotic._robotic.Frame at 0x7fcf4c1fbf30>"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,19 +283,16 @@
     "komo_2.setTiming(1., 10, 5., 0)\n",
     "\n",
     "# add collision constraints\n",
-    "komo_2.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq, [1e0])\n",
+    "komo_2.addObjective([], ry.FS.accumulatedCollisions, [], ry.OT.eq, [1e1])\n",
     "komo_2.addObjective([], ry.FS.jointLimits, [], ry.OT.ineq)\n",
     "komo_2.addObjective([], ry.FS.jointState, [], ry.OT.sos, [1e0], qHome)\n",
     "\n",
     "# calculate gripper and goal offset (in z direction)\n",
     "curObjPos = C.getFrame(curObj).getSize()\n",
-    "if max(curObjPos) == curObjPos[0]:\n",
-    "    goal_offset = [curObjPos[0], 0, 0]\n",
-    "elif max(curObjPos) == curObjPos[1]:\n",
-    "    goal_offset = [0, curObjPos[1], 0]\n",
-    "else:\n",
-    "    goal_offset = [0, 0, curObjPos[2]]\n",
     "\n",
+    "goal_offset = [0, 0, max(curObjPos) + 0.05]\n",
+    "\n",
+    "print(goal_offset)\n",
     "\n",
     "# this objective moves the gripper close to the goal\n",
     "komo_2.addObjective(\n",
@@ -333,7 +331,6 @@
     "    target=[0]\n",
     ")\n",
     "\n",
-    "\n",
     "# solve\n",
     "ret_2 = ry.NLP_Solver(komo_2.nlp(), verbose=0 ) .solve()\n",
     "print(ret_2)\n",
@@ -356,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +362,7 @@
        "0"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +390,7 @@
        "0"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,19 +404,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 235,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# C.addFrame(\"visual\") .setPosition(C.getFrame(\"goal\").getPosition()) .setColor([0, 1, 1]) .setShape(ry.ST.marker, [0.7])\n",
+    "C.addFrame(\"visual\") .setPosition(C.getFrame(\"goal\").getPosition()) .setColor([0, 1, 1]) .setShape(ry.ST.marker, [0.3])\n",
     "# # # C.addFrame(\"visual_gripper_orig\")  .setShape(ry.ST.marker, [0.]).setPosition(gripper_orig_pos) .setQuaternion(gripper_orig_quat) .setColor([0, 1, 0])\n",
-    "# C.addFrame(\"visual_gripper_final\") .setShape(ry.ST.marker, [0.4]) .setPosition(C.getFrame(\"l_gripper\").getPosition()) .setQuaternion(C.getFrame(\"l_gripper\").getQuaternion()) .setColor([0, 1, 0]) \n",
-    "# C.view()"
+    "C.addFrame(\"visual_gripper_final\") .setShape(ry.ST.marker, [0.3]) .setPosition(C.getFrame(\"l_gripper\").getPosition()) .setQuaternion(C.getFrame(\"l_gripper\").getQuaternion()) .setColor([0, 1, 0]) \n",
+    "C.view()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
