--- a/hw2/hw2_q2.ipynb
+++ b/hw2/hw2_q2.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -88,9 +88,9 @@
    ],
    "source": [
     "# select an object randomly\n",
-    "# curObj = random.choice(objects)\n",
+    "curObj = random.choice(objects)\n",
     "\n",
-    "curObj = \"book3\"\n",
+    "# curObj = \"book3\"\n",
     "\n",
     "print(\"Selected object: \", curObj)\n",
     "\n",
