--- a/hw2/hw2_q1.ipynb
+++ b/hw2/hw2_q1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -231,41 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
-      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
-      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
-      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
-      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
-      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
-      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
-      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
-      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:258(0) initializing with infeasible qT:\n",
-      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (l_finger2)-(cargo) [64,2] \td=-0\n",
-      "*** Found path at trial num # 9  ***\n"
+      "*** Found path at trial num # 3  ***\n"
      ]
     }
    ],
@@ -303,15 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:257(0) initializing with infeasible q0:\n",
-      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
       "*** Found path at trial num # 1  ***\n"
      ]
     }
@@ -350,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +386,9 @@
      "output_type": "stream",
      "text": [
       "*** Found path at trial num # 1  ***\n",
-      "  -- rrt success: queries:2723 tree sizes: 213 169\n"
+      "-- RRT_PathFinder.cpp:RRT_PathFinder:257(0) initializing with infeasible q0:\n",
+      "query: h_goal: 0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
+      "  -- rrt success: queries:2792 tree sizes: 179 240\n"
      ]
     }
    ],
@@ -446,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,16 +432,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<robotic._robotic.Frame at 0x7f07ae73d3f0>"
+       "<robotic._robotic.Frame at 0x7f46369dcd30>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
