--- a/Tutorial_02/part2.ipynb
+++ b/Tutorial_02/part2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "C = ry.Config()\n",
     "C.addFile(ry.raiPath('model2.g'))\n",
@@ -36,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,9 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ time: 0.059462, evals: 25, done: 1, feasible: 1, sos: 112.579, f: 0, ineq: 0, eq: 0.0301237 }\n",
+      "size of path: (75, 7)\n"
+     ]
+    }
+   ],
    "source": [
     "ret = ry.NLP_Solver(komo.nlp(), verbose=0 ) .solve()\n",
     "print(ret)\n",
@@ -97,9 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "komo.view_play(False, .7)"
    ]
@@ -114,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,9 +187,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{ time: 0.058944, evals: 33, done: 1, feasible: 1, sos: 0.118001, f: 0, ineq: 0, eq: 0.00064762 }\n",
+      "size of path: (75, 7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ret = ry.NLP_Solver(komo.nlp(), verbose=0 ) .solve()\n",
     "print(ret)\n",
@@ -170,9 +220,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "komo.view_play(True, .9)"
    ]
@@ -187,18 +248,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "del C\n",
-    "del S\n",
+    "# del S\n",
     "del komo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +268,7 @@
        "0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,14 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{ time: 0.083621, evals: 21, done: 1, feasible: 1, sos: 1.28333, f: 0, ineq: 0, eq: 0.0058449 }\n",
+      "{ time: 0.092954, evals: 21, done: 1, feasible: 1, sos: 1.28709, f: 0, ineq: 0, eq: 0.017976 }\n",
       "size of path: (66, 13)\n"
      ]
     },
@@ -359,7 +420,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,16 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -416,15 +477,15 @@
      "text": [
       "====nlp==== method:AugmentedLagrangian bounded: yes\n",
       "==nlp== it:0 evals:0 mu:1 nu:1 muLB:0.1\n",
-      "==nlp== it:   0  evals:  11  A(x):    1.11009  f:    0.98701  g:          0  h:    2.69981  |x-x'|:    1.19775 \tstop:DeltaConverge\n",
-      "==nlp== it:   1  evals:  11  A(x):    1.84855  mu:5\n",
-      "==nlp== it:   1  evals:  18  A(x):    1.26829  f:    1.20226  g:          0  h:   0.617665  |x-x'|:   0.123862 \tstop:DeltaConverge\n",
-      "==nlp== it:   2  evals:  18  A(x):    1.42346  mu:25\n",
-      "==nlp== it:   2  evals:  20  A(x):    1.28967  f:    1.28297  g:          0  h:   0.049356  |x-x'|:  0.0205945 \tstop:DeltaConverge\n",
-      "==nlp== it:   3  evals:  20  A(x):    1.29629  mu:125\n",
-      "==nlp== it:   3  evals:  21  A(x):     1.2858  f:    1.28529  g:          0  h: 0.00627223  |x-x'|: 0.00632252 \tstop:DeltaConverge\n",
+      "==nlp== it:   0  evals:  11  A(x):    1.10273  f:   0.979419  g:          0  h:     2.7179  |x-x'|:    1.21329 \tstop:DeltaConverge\n",
+      "==nlp== it:   1  evals:  11  A(x):    1.84262  mu:5\n",
+      "==nlp== it:   1  evals:  18  A(x):    1.26533  f:    1.19978  g:          0  h:   0.615127  |x-x'|:   0.126914 \tstop:DeltaConverge\n",
+      "==nlp== it:   2  evals:  18  A(x):    1.41895  mu:25\n",
+      "==nlp== it:   2  evals:  20  A(x):    1.28708  f:     1.2805  g:          0  h:  0.0482595  |x-x'|:  0.0205204 \tstop:DeltaConverge\n",
+      "==nlp== it:   3  evals:  20  A(x):    1.29251  mu:125\n",
+      "==nlp== it:   3  evals:  21  A(x):    1.28351  f:    1.28313  g:          0  h: 0.00565264  |x-x'|: 0.00635846 \tstop:DeltaConverge\n",
       "==nlp== StoppingCriterion Delta<0.01\n",
-      "{ time: 0.052748, evals: 21, done: 1, feasible: 1, sos: 1.28529, f: 0, ineq: 0, eq: 0.00627223 }\n"
+      "{ time: 0.090315, evals: 21, done: 1, feasible: 1, sos: 1.28313, f: 0, ineq: 0, eq: 0.00565264 }\n"
      ]
     }
    ],
@@ -442,9 +503,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#komo.view(True, 'waypoints solution')\n",
     "komo.view_play(True, .2)"
@@ -452,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,6 +534,32 @@
     "# komo.optimize();\n",
     "# #/  komo.checkGradients();\n",
     "# komo.view(False, \"result\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import robotic as ry\n",
+    "# import numpy as np\n",
+    "# import time\n",
+    "# C = ry.Config()\n",
+    "# C.addFile(ry.raiPath('scenarios/pandasTable.g'))\n",
+    "# C.view()\n",
+    "# C.attach(\"l_gripper\", \"r_gripper\")\n",
+    "# #move a bit around\n",
+    "\n",
+    "# q = C.getJointState()\n",
+    "\n",
+    "# for t in range(30):\n",
+    "#     q[0] = np.sin(t/10)\n",
+    "\n",
+    "#     C.setJointState(q)\n",
+    "#     C.view()\n",
+    "#     time.sleep(0.1)\n",
+    "# # del C"
    ]
   }
  ],
