--- a/hw3/hw3_1.1.ipynb
+++ b/hw3/hw3_1.1.ipynb
@@ -2,34 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import robotic as ry\n",
-    "import time\n",
-    "max_trials = 10\n",
-    "max_vel = 100\n",
-    "max_acc = max_vel\n",
-    "\n",
-    "C = ry.Config()\n",
-    "C.view()"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +23,13 @@
     }
    ],
    "source": [
+    "import robotic as ry\n",
+    "import time\n",
+    "max_trials = 10\n",
+    "max_vel = 100\n",
+    "max_acc = max_vel\n",
+    "\n",
+    "C = ry.Config()\n",
     "C.addFile('/home/vboxuser/Desktop/CS449/Migi/hw3/GFiles-HW3/environment.g')\n",
     "\n",
     "# C.addFile('./environment.g')\n",
@@ -49,6 +38,30 @@
     "# print(qHome)\n",
     "C.view()\n",
     "print(ry.raiPath('environment.g'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 Perception Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qHome:  [ 0.  -0.5  0.  -2.   0.   2.  -0.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"qHome: \", C.getJointState())"
    ]
   }
  ],
